# priorbot

./: .gitignore  README.md  data.py  llmprior.py  pyproject.toml  sample_llm_priors.sh  skbayes.py
autoprior/: data.py
datasets/: balbank.json  blood.json  creditg.json  diabetes.json  gallstone.json  heart.json  maternal.json  neurofib.json  thyroid.json
examples/: blr.py  whisky.py
prior-samples/meta-llama/Meta-Llama-3-8B-Instruct/: balbank.json  blood.json  calhousing.json  creditg.json  diabetes.json  heart.json  income.json  maternal.json  neurofib.json  thyroid.json
priorbot/: data.py  llm.py  priors.py  skbayes.py
