[project]
name = "autoprior"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "liac-arff>=2.5.0",
    "outlines>=1.2.7",
    "pydantic>=2.12.3",
    "scikit-learn>=1.7.2",
    "transformers>=4.57.1",
    "torch>=2.6.0",
    "accelerate>=1.11.0",
    "pandas>=2.3.3",
]
