[project]
name = "autoprior"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.3",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
]

[project.optional-dependencies]
local-llm = [
    "outlines>=1.2.7",
    "transformers>=4.57.1",
    "accelerate>=1.11.0",
]
remote-llm = [
    "openai>=2.17.0",
]
