[project]
name = "priorbot"
version = "0.2.0"
description = "Utilities for eliciting and leveraging Bayesian priors from LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.3",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
]

[project.optional-dependencies]
local-llm = [
    "outlines>=1.2.7",
    "transformers>=4.57.1",
    "accelerate>=1.11.0",
]
remote-llm = [
    "openai>=2.17.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["priorbot*"]
